--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,25 @@ migrate_working_dir/
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
-.flutter-plugins-dependencies
 .pub-cache/
 .pub/
 /build/
 /coverage/
+.packages
+build/
+.flutter-plugins
+.flutter-plugins-dependencies
+
+# Android
+android/.gradle/
+android/local.properties
+
+# iOS
+ios/Pods/
+
+# Firebase
+google-services.json
+GoogleService-Info.plist
 firebase_options.dart
 
 # Symbolication related
