--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/images/recoltes/
+    - assets/images/strates/
+    - assets/images/flags/
+    
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
