--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/images/recoltes/
     - assets/images/strates/
     - assets/images/flags/
+    - assets/images/symboles/
     
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
