--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,8 @@ flutter:
     - assets/images/strates/
     - assets/images/flags/
     - assets/images/symboles/
-    
+    - assets/tiles/
+        
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
